// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <EventsTimelines /> should renders with props correctly mount testing 1`] = `
<EventsTimelines
  eventsTimeline={
    Object {
      "1452549600000": Array [
        Object {
          "dateCreated": 1454669420000,
          "dateTime": 1452595820958,
          "dateTimeConvert": "12-Jan-2016",
          "description": "Complications following surgery",
          "name": "Transfer from ward to ICU",
          "sideDateInTimeline": "left",
          "source": "ethercis",
          "sourceId": "1aa74f42-ff10-4fa8-8d21-7242e425d9bb",
          "type": "Transfer",
        },
      ],
    }
  }
  id="daf9a9fa-a7a0-4809-9456-d0e1adea2a85"
  onCellClick={[Function]}
>
  <div
    className="wrap-timeline"
  >
    <Scrollbars
      autoHeight={false}
      autoHeightMax={200}
      autoHeightMin={0}
      autoHide={false}
      autoHideDuration={200}
      autoHideTimeout={1000}
      hideTracksWhenNotNeeded={false}
      renderThumbHorizontal={[Function]}
      renderThumbVertical={[Function]}
      renderTrackHorizontal={[Function]}
      renderTrackVertical={[Function]}
      renderView={[Function]}
      style={
        Object {
          "height": 648,
        }
      }
      tagName="div"
      thumbMinSize={30}
      universal={false}
    >
      <div
        style={
          Object {
            "height": 648,
            "overflow": "hidden",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          key="view"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "bottom": 0,
              "left": 0,
              "marginBottom": 0,
              "marginRight": 0,
              "overflow": "scroll",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            className="timeline-content-scroll"
          >
            <div
              className="timeline"
            >
              <div
                className="timeline-inner"
              >
                <div>
                  <div
                    className="timeline-header"
                  >
                    11-Jan-2016
                  </div>
                  <div
                    className="timeline-date-group"
                  >
                    <div
                      className="timeline-date left"
                      onClick={[Function]}
                    >
                      <div
                        className="timeline-date-content"
                      >
                        <div
                          className="timeline-date-title"
                        >
                          Transfer from ward to ICU
                        </div>
                        <div
                          className="timeline-date-subtitle"
                        >
                          Transfer
                        </div>
                        <div
                          className="timeline-date-text"
                        >
                          12-Jan-2016
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          key="trackHorizontal"
          style={
            Object {
              "borderRadius": 3,
              "bottom": 2,
              "display": "none",
              "height": 6,
              "left": 2,
              "position": "absolute",
              "right": 2,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "height": "100%",
                "position": "relative",
              }
            }
          />
        </div>
        <div
          className="track-vertical"
          key="trackVertical"
          style={
            Object {
              "display": "none",
              "position": "absolute",
              "width": 6,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "position": "relative",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </Scrollbars>
  </div>
</EventsTimelines>
`;

exports[`Component <EventsTimelines /> should renders with props correctly shallow testing 1`] = `
<div
  className="wrap-timeline"
>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    style={
      Object {
        "height": 648,
      }
    }
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="timeline-content-scroll"
    >
      <div
        className="timeline"
      >
        <div
          className="timeline-inner"
        >
          <div>
            <div
              className="timeline-header"
            >
              11-Jan-2016
            </div>
            <div
              className="timeline-date-group"
            >
              <div
                className="timeline-date left"
                onClick={[Function]}
              >
                <div
                  className="timeline-date-content"
                >
                  <div
                    className="timeline-date-title"
                  >
                    Transfer from ward to ICU
                  </div>
                  <div
                    className="timeline-date-subtitle"
                  >
                    Transfer
                  </div>
                  <div
                    className="timeline-date-text"
                  >
                    12-Jan-2016
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </Scrollbars>
</div>
`;
